[gd_scene load_steps=7 format=2]

[ext_resource path="res://CellControl.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/icons/check.png" type="Texture" id=3]
[ext_resource path="res://assets/icons/pencil-outline.png" type="Texture" id=4]
[ext_resource path="res://assets/icons/delete.png" type="Texture" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.196078, 0.231373, 0.309804, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[node name="Panel" type="PanelContainer"]
margin_right = 104.0
margin_bottom = 112.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 104.0
margin_bottom = 128.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 120.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Title" type="Label" parent="MarginContainer/VBox"]
margin_right = 88.0
margin_bottom = 16.0
rect_min_size = Vector2( 0, 16 )
text = "Title"
align = 1
clip_text = true
max_lines_visible = 1

[node name="Preview" type="TextureRect" parent="MarginContainer/VBox"]
margin_top = 20.0
margin_right = 88.0
margin_bottom = 84.0
texture = ExtResource( 2 )
stretch_mode = 4

[node name="HBox" type="HBoxContainer" parent="MarginContainer/VBox"]
margin_top = 88.0
margin_right = 88.0
margin_bottom = 112.0
custom_constants/separation = 8
alignment = 1

[node name="Select" type="TextureButton" parent="MarginContainer/VBox/HBox"]
margin_right = 24.0
margin_bottom = 24.0
texture_normal = ExtResource( 3 )

[node name="Edit" type="TextureButton" parent="MarginContainer/VBox/HBox"]
margin_left = 32.0
margin_right = 56.0
margin_bottom = 24.0
texture_normal = ExtResource( 4 )

[node name="Delete" type="TextureButton" parent="MarginContainer/VBox/HBox"]
margin_left = 64.0
margin_right = 88.0
margin_bottom = 24.0
texture_normal = ExtResource( 5 )
[connection signal="button_down" from="MarginContainer/VBox/HBox/Select" to="." method="_on_Select_button_down"]
[connection signal="button_down" from="MarginContainer/VBox/HBox/Edit" to="." method="_on_Edit_button_down"]
[connection signal="button_down" from="MarginContainer/VBox/HBox/Delete" to="." method="_on_Delete_button_down"]
